--- a/index.html
+++ b/index.html
@@ -16,10 +16,26 @@
       :root { --bg:#0b0f19; --fg:#e5e7eb; --muted:#94a3b8; --panel:#0f172a; --border:#1f2937; --accent:#3b82f6; }
     }
     body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Inter,sans-serif}
-    .wrap{max-width:1100px;margin:0 auto;padding:20px}
-    .topbar{display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:12px}
+
+    /* --- NEW: app frame with sidebar (lessons) + main --- */
+    .app-frame{display:flex;gap:12px;max-width:1200px;margin:0 auto;padding:20px}
+    .sidebar{width:260px;min-width:220px;border:1px solid var(--border);border-radius:12px;background:var(--panel);overflow:auto;max-height:calc(100vh - 120px)}
+    .sidebar h3{margin:0;padding:10px 12px;border-bottom:1px solid var(--border);font-size:14px}
+    #lessonList{padding:8px}
+    #lessonList button{display:block;width:100%;text-align:left;border:1px solid var(--border);background:var(--bg);color:var(--fg);padding:8px 10px;margin-bottom:8px;border-radius:10px;cursor:pointer}
+    #lessonList button.completed{outline:2px solid #22c55e}
+    .maincol{flex:1;display:flex;flex-direction:column;gap:12px}
+
+    .topbar{display:flex;gap:12px;align-items:center;justify-content:space-between;margin:12px auto 0;max-width:1200px;padding:0 20px}
     .brand{font-weight:700;letter-spacing:.2px}
-    .row{display:flex;gap:12px;height:calc(100vh - 160px);min-height:420px}
+
+    /* Lesson content panel */
+    .lesson-card{border:1px solid var(--border);border-radius:12px;background:var(--panel);overflow:hidden}
+    .lesson-card header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px;border-bottom:1px solid var(--border);font-weight:600}
+    #lessonContent{padding:12px;max-height:260px;overflow:auto}
+
+    /* Editor/console split (your original) */
+    .row{display:flex;gap:12px;height:calc(100vh - 220px);min-height:420px}
     .col{flex:1;display:flex;flex-direction:column;border:1px solid var(--border);border-radius:12px;background:var(--panel);overflow:hidden}
     .col header{display:flex;align-items:center;justify-content:space-between;padding:10px 12px;border-bottom:1px solid var(--border);font-weight:600}
     .console{padding:12px;font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;white-space:pre-wrap;overflow:auto;flex:1}
@@ -28,7 +44,7 @@
     .btn:disabled{opacity:.6;cursor:not-allowed}
     .toolbar{display:flex;gap:8px;align-items:center}
     select{padding:6px 10px;border-radius:10px;border:1px solid var(--border);background:var(--bg);color:var(--fg)}
-    .status{font-size:12px;color:var(--muted);margin-top:6px}
+    .status{font-size:12px;color:var(--muted);margin-left:8px}
     #editor{height:100%;width:100%}
   </style>
 
@@ -38,36 +54,59 @@
   <script src="https://cdn.jsdelivr.net/npm/skulpt@1.2.0/dist/skulpt-stdlib.js"></script>
 </head>
 <body>
-  <div class="wrap">
-    <div class="topbar">
-      <div class="brand">Python Learn</div>
-      <div class="toolbar">
-        <label>Examples
-          <select id="example">
-            <option value="hello">Hello World</option>
-            <option value="loop">For Loop</option>
-            <option value="input">Input</option>
-            <option value="list">List Ops</option>
-          </select>
-        </label>
-        <button id="runBtn" class="btn primary">▶ Run</button>
-        <button id="clearBtn" class="btn">⟲ Clear</button>
-      </div>
+  <!-- Top bar -->
+  <div class="topbar">
+    <div class="brand">Python Learn</div>
+    <div class="toolbar">
+      <label>Examples
+        <select id="example">
+          <option value="hello">Hello World</option>
+          <option value="loop">For Loop</option>
+          <option value="input">Input</option>
+          <option value="list">List Ops</option>
+        </select>
+      </label>
+      <button id="runBtn" class="btn primary">▶ Run</button>
+      <button id="clearBtn" class="btn">⟲ Clear</button>
     </div>
+  </div>
 
-    <div class="row" id="splitRow">
-      <div class="col">
-        <header>Editor <span class="status" id="status">Ready</span></header>
-        <div id="editor"></div>
-      </div>
-      <div class="col">
-        <header>Console <button id="clearConsole" class="btn">Clear</button></header>
-        <div id="console" class="console"></div>
+  <!-- NEW: sidebar + main column -->
+  <div class="app-frame">
+    <aside class="sidebar">
+      <h3>Lessons</h3>
+      <!-- ID MUST be lessonList for assets/app.js -->
+      <nav id="lessonList"></nav>
+    </aside>
+
+    <div class="maincol">
+      <!-- Lesson content area (used by assets/app.js) -->
+      <section class="lesson-card">
+        <header>Lesson</header>
+        <div id="lessonContent"></div>
+      </section>
+
+      <!-- Your original editor/console split -->
+      <div class="row" id="splitRow">
+        <div class="col">
+          <header>
+            <span>Editor</span>
+            <span class="status" id="status">Ready</span>
+          </header>
+          <div id="editor"></div>
+        </div>
+        <div class="col">
+          <header>
+            <span>Console</span>
+            <button id="clearConsole" class="btn">Clear</button>
+          </header>
+          <div id="console" class="console"></div>
+        </div>
       </div>
     </div>
   </div>
 
-  <!-- Your app code (keep only if it doesn't conflict with run logic) -->
+  <!-- Your app code (lesson loader/UI, keep this) -->
   <script src="assets/app.js" type="module"></script>
 
   <!-- Split.js for resizable panes -->
@@ -148,8 +187,6 @@
       }
       return Sk.builtinFiles["files"][x];
     }
-
-    // Expose a promise-based runner the UI calls
     window.runPython = async function(code){
       let out = "";
       function outf(s){ out += s; }
@@ -169,7 +206,6 @@
         );
         return out;
       } catch (e) {
-        // Append error after any stdout text
         return out + (out ? "\n" : "") + e.toString();
       }
     };
