--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="apple-touch-icon" href="assets/icons/icon-180.png" />
   <link rel="icon" href="assets/icons/icon-192.png" />
+  <link rel="icon" href="pwa/icons/icon-192.png" />
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0b0f19" media="(prefers-color-scheme: dark)">
   <meta name="apple-mobile-web-app-capable" content="yes" />
