--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </main>
 
   <!-- App JS -->
-  <script type="module" src="app/app.js"></script>
+  <script type="module" src="assets/app.js"></script>
 
   <!-- Theme toggle + PWA wiring -->
   <script>
