--- a/index.html
+++ b/index.html
@@ -1,231 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Python Learn</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Learn Python - Interactive Lessons</title>
+  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="manifest" href="pwa/manifest.json">
+  <meta name="theme-color" content="#3b82f6">
+  <link rel="apple-touch-icon" href="pwa/icons/icon-180.png">
 
-  <!-- Project Page base (derifo.github.io/python-pwa/) -->
-  <base href="/python-pwa/">
-
-  <!-- PWA -->
-  <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="apple-touch-icon" href="assets/icons/icon-180.png" />
-  <link rel="icon" href="assets/icons/icon-192.png" />
-  <link rel="icon" href="pwa/icons/icon-192.png" />
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <meta name="theme-color" content="#0b0f19" media="(prefers-color-scheme: dark)">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-
-  <!-- Apple-like theme -->
-  <style>
-    :root {
-      --bg: #ffffff;
-      --fg: #000000;
-      --accent: #0071e3;
-      --muted: #6e6e73;
-      --panel: #f5f5f7;
-      --border: #e5e5ea;
-      --radius: 12px;
-      --wrap: 1100px;
-    }
-    [data-theme="dark"] {
-      --bg: #000000;
-      --fg: #f5f5f7;
-      --accent: #0a84ff;
-      --muted: #a1a1a6;
-      --panel: #1c1c1e;
-      --border: #2c2c2e;
-    }
-    html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Helvetica, Arial, sans-serif;
-      background-color: var(--bg);
-      color: var(--fg);
-      transition: background-color 0.3s, color 0.3s;
-    }
-    .wrap { max-width: var(--wrap); margin: 0 auto; padding: 1.25rem; }
-
-    header {
-      position: sticky; top: 0; z-index: 100;
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 0.75rem 1rem;
-      background-color: color-mix(in oklab, var(--panel) 85%, transparent);
-      backdrop-filter: saturate(180%) blur(12px);
-      border-bottom: 1px solid var(--border);
-    }
-    header .left, header .right { display: flex; gap: .5rem; align-items: center; }
-    header h1 { font-weight: 600; font-size: 1.25rem; margin: 0; }
-    .btn, .icon-btn {
-      display: inline-flex; align-items: center; gap: .4rem;
-      padding: .55rem .9rem; border-radius: 999px;
-      border: 1px solid var(--border); background: var(--panel); color: var(--fg);
-      cursor: pointer; font-size: .95rem;
-    }
-    .btn.primary { background: var(--accent); color: #fff; border-color: transparent; }
-    .icon-btn { padding: .45rem .7rem; font-size: 1.1rem; background: transparent; }
-    .avatar { border-radius: 999px; padding: .4rem .7rem; border: 1px solid var(--border); background: var(--panel); }
-
-    main { padding: 1rem; }
-    .hero { padding: 2.25rem 0; }
-    .hero h2 { font-size: clamp(1.8rem, 4vw, 3rem); line-height: 1.15; margin: .2em 0; }
-    .hero p { color: var(--muted); max-width: 800px; margin: .4rem 0 0 0; }
-
-    #lessonList { display: flex; flex-wrap: wrap; gap: 0.5rem; margin: 1rem 0 1.5rem; }
-    #lessonList button {
-      background-color: var(--panel);
-      border: 1px solid var(--border);
-      padding: 0.6rem 1rem;
-      border-radius: var(--radius);
-      cursor: pointer;
-      color: var(--fg);
-      transition: background-color 0.15s, color 0.15s, transform .05s;
-    }
-    #lessonList button:active { transform: translateY(1px); }
-    #lessonList button:hover { background-color: var(--accent); color: #fff; }
-
-    #lessonContent { margin-bottom: 1.5rem; line-height: 1.6; border: 1px solid var(--border); background: var(--panel); border-radius: var(--radius); padding: 1rem; }
-
-    textarea#editor {
-      width: 100%; height: 200px; background-color: var(--panel); color: var(--fg);
-      border: 1px solid var(--border); border-radius: var(--radius);
-      padding: 1rem; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size: 1rem; resize: vertical;
-    }
-
-    .buttons { display: flex; gap: 0.6rem; margin-top: 1rem; flex-wrap: wrap; }
-    button.run, button.clear {
-      padding: 0.6rem 1.2rem; font-size: 1rem; border: none; border-radius: var(--radius); cursor: pointer;
-      background-color: var(--accent); color: #fff; transition: background-color 0.2s;
-    }
-    button.clear { background-color: var(--muted); color: #fff; }
-
-    pre#output {
-      background-color: var(--panel); border: 1px solid var(--border);
-      padding: 1rem; border-radius: var(--radius); margin-top: 1rem; white-space: pre-wrap; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
-    }
-
-    /* Progress + KPIs */
-    .kpis { display: flex; gap: .75rem; flex-wrap: wrap; margin: 1rem 0 1.25rem; }
-    .kpi {
-      flex: 1; min-width: 160px; background: var(--panel); border: 1px solid var(--border);
-      border-radius: var(--radius); padding: .9rem;
-    }
-    .kpi .label { color: var(--muted); font-size: .85rem; }
-    .kpi .value { font-weight: 700; font-size: 1.2rem; margin-top: .25rem; }
-    .progress { height: 10px; border-radius: 999px; background: color-mix(in oklab, var(--panel) 70%, var(--border)); overflow: hidden; border: 1px solid var(--border); }
-    .progress > span { display: block; height: 100%; width: 0%; background: var(--accent); transition: width .35s ease; }
-
-    footer { border-top: 1px solid var(--border); padding: 1rem 0; color: var(--muted); }
-    :focus-visible { outline: 2px solid var(--accent); outline-offset: 2px; }
-    * { touch-action: manipulation; }
-  </style>
+  <!-- Skulpt Libraries for Python Execution -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/skulpt/0.11.1/skulpt.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/skulpt/0.11.1/skulpt-stdlib.js"></script>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <h1>Python Learn</h1>
-    </div>
-    <div class="right">
-      <button class="btn" id="installBtn" hidden>Install</button>
-      <button class="icon-btn" id="themeToggle" aria-label="Toggle theme" title="Toggle theme">🌙</button>
-      <button class="avatar" id="profileBtn" title="Profile">👤</button>
-    </div>
-  </header>
+  <div class="container">
+    <header>
+      <h1>🐍 Learn Python</h1>
+      <p>Interactive lessons for beginners</p>
+    </header>
 
-  <main class="wrap">
-    <section class="hero">
-      <h2>Learn Python. Anywhere. Even on iPad.</h2>
-      <p>Offline-first PWA with progress tracking and achievements. Clean, Apple-style UI.</p>
-    </section>
-
-    <!-- KPIs -->
-    <section class="kpis" aria-label="Your stats">
-      <div class="kpi">
-        <div class="label">XP</div>
-        <div class="value" id="kpiXP">0</div>
-      </div>
-      <div class="kpi">
-        <div class="label">Achievements</div>
-        <div class="value" id="kpiAch">0</div>
-      </div>
-      <div class="kpi" style="flex:2">
-        <div class="label">Course Progress</div>
-        <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
-          <span id="progressInner" style="width:0%"></span>
+    <div class="main-layout">
+      <aside class="sidebar">
+        <h2>Lessons</h2>
+        <div id="lessonList" class="lesson-list">
+          <div style="padding:8px;color:#9ca3af">Loading lessons...</div>
         </div>
-      </div>
-    </section>
+      </aside>
 
-    <!-- Lessons -->
-    <div id="lessonList"></div>
-    <div id="lessonContent"></div>
+      <main class="content">
+        <div id="lessonContent" class="lesson-content">
+          <p>Select a lesson to begin</p>
+        </div>
 
-    <textarea id="editor" placeholder="Write your Python code here..."></textarea>
-    <div class="buttons">
-      <button class="run" id="runBtn">Run</button>
-      <button class="clear" id="clearOutputBtn">Clear Output</button>
+        <div class="editor-section">
+          <div class="editor-header">
+            <h3>Code Editor</h3>
+            <button id="runBtn" class="btn btn-primary">▶ Run</button>
+          </div>
+          <textarea id="editor" class="code-editor" placeholder="# Write your Python code here..."></textarea>
+        </div>
+
+        <div class="output-section">
+          <div class="output-header">
+            <h3>Output</h3>
+            <button id="clearOutputBtn" class="btn btn-secondary">Clear</button>
+          </div>
+          <pre id="output" class="output"></pre>
+        </div>
+      </main>
     </div>
-    <pre id="output"></pre>
-  </main>
+  </div>
 
-  <!-- App JS -->
   <script type="module" src="assets/app.js"></script>
-
-  <!-- Theme toggle + PWA wiring -->
-  <script>
-    // Theme toggle
-    const themeToggle = document.getElementById('themeToggle');
-    const root = document.documentElement;
-
-    function setTheme(mode) {
-      root.setAttribute('data-theme', mode);
-      localStorage.setItem('theme', mode);
-      themeToggle.textContent = mode === 'dark' ? '☀️' : '🌙';
-    }
-    themeToggle.addEventListener('click', () => {
-      const current = root.getAttribute('data-theme') || 'light';
-      setTheme(current === 'light' ? 'dark' : 'light');
-    });
-    const savedTheme = localStorage.getItem('theme');
-    setTheme(savedTheme ? savedTheme : (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'));
-
-    // PWA install prompt
-    let deferredPrompt;
-    const installBtn = document.getElementById('installBtn');
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-      installBtn.hidden = false;
-    });
-    installBtn?.addEventListener('click', async () => {
-      installBtn.hidden = true;
-      await deferredPrompt?.prompt();
-      deferredPrompt = null;
-    });
-
-    // Service Worker (relative to <base>)
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('pwa/sw.js').catch(console.error);
-      });
-    }
-
-    // Minimal progress hooks (your app/app.js should update these IDs)
-    // Example: call these from your logic after loading lessons/progress
-    window.__updateKPI = function ({ xp = 0, achievements = 0, progressPct = 0 }) {
-      const xpEl = document.getElementById('kpiXP');
-      const achEl = document.getElementById('kpiAch');
-      const bar = document.getElementById('progressInner');
-      const pb = bar?.parentElement;
-      if (xpEl) xpEl.textContent = xp;
-      if (achEl) achEl.textContent = achievements;
-      if (bar && pb) {
-        bar.style.width = Math.max(0, Math.min(100, progressPct)) + '%';
-        pb.setAttribute('aria-valuenow', String(Math.round(progressPct)));
-      }
-    };
-  </script>
 </body>
 </html>
